--- a/src/webroot/css/less/photosIndex.less
+++ b/src/webroot/css/less/photosIndex.less
@@ -291,11 +291,11 @@
         }
         
         .photos-view-products-icon {
-            width: 100%;
+            width: 106%;
             height: 0;
             padding-bottom: 100%;
             margin-top: 5%;
-            margin-left: -5%;
+            margin-left: -3%;
             margin-right: -5%;
             margin-bottom: 1.5%;
             position: relative;
@@ -307,6 +307,15 @@
             
             .photos-vertical-overlay {
                 height: 101%;
+            }
+            .selected-product-overlay {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%);
+                background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+                background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+                filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 );
             }
         }
     }
@@ -351,7 +360,11 @@
                 cursor:pointer;
                 z-index: 100;
             }
-            
+            .photos-product-name {
+                position: absolute;
+                top: 5px;
+                left: 20px;
+            }
         }
         .photos-product-icon {
             width: 100%;
@@ -360,6 +373,28 @@
             margin-bottom: 1.5%;
             position: relative;
             overflow: hidden;
+        }
+        .photos-product-img-wrapper {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            .photos-portrait-container {
+                position: absolute;
+                width: 100px;
+                height: 100px;
+                top: 50%;
+                left: 50%;
+                margin-left: -50px;
+                margin-top: 115px;
+                overflow: hidden;
+                border-radius: 55px;
+                border: 3px solid #00ffff;
+                z-index: 1;
+                .photos-horizontal, .photos-vertical {
+                    height: 150%;
+                    max-width: 100%;
+                }
+            }
         }
     }
     
@@ -565,6 +600,13 @@
         width: 73%;
         z-index: 200;
     }
+    
+    .photos-product-index .photos-product-container .photos-product-img-wrapper .photos-portrait-container {
+        margin-top: 40%;
+        width: 60px;
+        height: 60px;
+        margin-left: -30px;
+    }
 }
 
 @media only screen and (max-width: 629px) and (min-width : 470px) {
@@ -585,6 +627,13 @@
         width: 73%;
         z-index: 200;
     }
+    
+    .photos-product-index .photos-product-container .photos-product-img-wrapper .photos-portrait-container {
+        margin-top: 60px;
+        width: 60px;
+        height: 60px;
+        margin-left: -30px;
+    }
 }
 
 @media only screen and (max-width: 767px) and (min-width : 630px) {
@@ -598,6 +647,9 @@
         margin-right: -15px;
         max-width: 150px;
         border-left: 2px solid #b5b5b5;
+    }
+    .photos-product-index .photos-product-container .photos-product-img-wrapper .photos-portrait-container {
+        margin-top: 80px;
     }
 }
 
@@ -614,6 +666,10 @@
         width: 150px;
         border-left: 2px solid #b5b5b5;
     }
+    
+    .photos-product-index .photos-product-container .photos-product-img-wrapper .photos-portrait-container {
+        margin-top: 80px;
+    }
 }
 
 @media only screen and (max-width: 1199px) and (min-width : 992px) {
@@ -625,6 +681,13 @@
         width: 323.33px;
         border-left: 2px solid #b5b5b5;
     }
+    
+    .photos-product-index .photos-product-container .photos-product-img-wrapper .photos-portrait-container {
+        margin-top: 70px;
+        width: 60px;
+        height: 60px;
+        margin-left: -30px;
+    }
 }
 
 @media only screen and (max-width: 1599px) and (min-width : 1200px) {
@@ -634,6 +697,10 @@
         margin-left: -17px;
         width: 390px;
         border-left: 2px solid #b5b5b5;
+    }
+    
+    .photos-product-index .photos-product-container .photos-product-img-wrapper .photos-portrait-container {
+        margin-top: 70px;
     }
 }
 
