--- a/src/webroot/css/less/cart.less
+++ b/src/webroot/css/less/cart.less
@@ -214,6 +214,23 @@
                     padding-left: 10px;
                 }
             }
+            .funproduct {
+                position: relative;
+                width: 154px;
+                height: 154px;
+                
+                .funproduct-gekozen-foto:hover + .cartline-photo-container {
+                    display: block;
+                }
+                
+                .cartline-photo-container {
+                    display: none;
+                    
+                    .cartline-photo {
+                        z-index: 2;
+                    }
+                }
+            }
         }
         .cartline-product-quantity {
             .quantity-container {
